[package]
name = "targets-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } 
warp = "0.3"                                   
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
openssl = { version = "0.10", features = ["vendored"] }